# tap-checkly

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yaml  constraints.txt  dynamic-publish.yaml  test.yaml  test.yml  update_catalog.yml
scripts/: update_catalog.py
tap_checkly/: __init__.py  __main__.py  client.py  openapi.json  streams.py  tap.py
tap_checkly/schemas/: __init__.py  alert_channels.json  alert_notifications.json  check_alerts.json  check_groups.json  check_results.json  checks.json  dashboards.json  locations.json  maintenance_windows.json  private_locations.json  runtimes.json  snippets.json  status_page_incidents.json  status_page_services.json  status_pages.json  variables.json
tests/: __init__.py  test_core.py
