[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-checkly"
description = "Singer tap for Checkly, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Checkly",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.13"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-checkly" = "tap_checkly.tap:TapCheckly.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-checkly/#readme"
Homepage = "https://github.com/reservoir-data/tap-checkly"
Repository = "https://github.com/reservoir-data/tap-checkly"

[dependency-groups]
dev = [
  { include-group = "scripts" },
  { include-group = "testing" },
  { include-group = "typing" },
]
scripts = [
  "requests>=2.32.5",
  "toolz>=1.1",
]
testing = [
  "deptry>=0.12",
  "pytest~=9.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.18",
  "ty>=0.0.1a21",
  "types-requests>=2.32.4.20260107",
  { include-group = "scripts" },
  { include-group = "testing" },
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"

[tool.ruff]
line-length = 120
src = [
  "tap_checkly",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
  "INP001",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
isort.known-first-party = [
  "tap_checkly",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
toolz = "toolz"
ty = "ty"
types-requests = "types-requests"
[tool.deptry.per_rule_ignores]
DEP004 = [
  "requests",
  "toolz",
]

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
xfail_strict = true
testpaths = [ "tests" ]

[tool.tox]
min_version = "4.43"
requires = [
  # renovate: datasource=pypi depName=tox
  "tox~=4.22",
  # renovate: datasource=pypi depName=tox-uv
  "tox-uv~=1.17",
]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 13 },
  ] },
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
sync.commands = [ [ "tap-checkly", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", "tap_checkly", "tests", "scripts" ],
  [ "ty", "check" ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_CHECKLY_*" ]
set_env = { "PYO3_USE_ABI3_FORWARD_COMPATIBILITY" = "1" }
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
follow_untyped_imports = true
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
