[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-checkly"
description = "Singer tap for Checkly, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Checkly",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.13"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-checkly = "tap_checkly.tap:TapCheckly.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-checkly/#readme"
Homepage = "https://github.com/reservoir-data/tap-checkly"
Repository = "https://github.com/reservoir-data/tap-checkly"

[dependency-groups]
dev = [
  "deptry>=0.25",
  { include-group = "scripts" },
  { include-group = "testing" },
  { include-group = "typing" },
]
scripts = [
  "requests>=2.32.5",
  "toolz>=1.1",
]
testing = [
  "pytest~=9.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.50",
  { include-group = "scripts" },
  { include-group = "testing" },
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"

[tool.ruff]
line-length = 120
src = [
  "tap_checkly",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
  "INP001",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
isort.known-first-party = [
  "tap_checkly",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
extend_exclude = [ "scripts" ]

[tool.pyproject-fmt]
table_format = "long"

[tool.typos.files]
extend-exclude = [ "tap_checkly/schemas/*.json" ]

[tool.mypy]
follow_untyped_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unused_configs = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
]
filterwarnings = [
  "error",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  "tox>=4.55",
  "tox-uv>=1.35",
]
env_list = [
  "dependencies",
  "typing",
  { prefix = "3.", start = 13 },
]
[tool.tox.env.dependencies]
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.sync]
commands = [ [ "tap-checkly", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "tap_checkly", "tests", "scripts" ],
  [ "ty", "check" ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = [ "testing" ]
pass_env = [ "TAP_CHECKLY_*" ]
set_env = { PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1" }
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
